fix: show scrollbar webkit (#271)

--- a/src/layouts/general/layout.module.css
+++ b/src/layouts/general/layout.module.css
@@ -305,7 +305,7 @@
 .nav__inner {
   position: sticky;
   top: 0;
-  overflow: auto;
+  overflow-y: auto;
   padding: 0rem 2rem 2rem;
   font-size: 1.2rem;
   width: 100vw;
@@ -560,11 +560,23 @@
   }
   .nav__handbooks__container {
     overflow-x: hidden;
+    padding-right: 1rem;
     height: 100%;
+
+    scrollbar-color: var(--color-secondary4__shade2)
+      var(--color-secondary1__shade2);
   }
   .nav__handbooks__container::-webkit-scrollbar {
-    display: none;
+    background-color: var(--color-secondary1__shade2);
+    border-radius: 0.625rem;
+    width: 0.625rem;
   }
+
+  .nav__handbooks__container::-webkit-scrollbar-thumb {
+    background-color: var(--color-secondary4__shade2);
+    border-radius: 0.625rem;
+  }
+
   .header,
   .header__dark {
     z-index: 3;
